--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-
 <h1>Instrucciones para usar una computadora</h1>
 
 <h4>Lección 1 </h4>
 
-<p>Nadie habrá dejado de observar que con frecuencia las personas pasan horas frente al brillo de su computadora, conducta que se repite sea del color que sea tanto el brillo como el exterior que lo envuelve.  Teclado, ratón, placa madre, procesador, memoria RAM, placa de sonido, fuente eléctrica, puertos USB, disco duro, pantalla... Cada una de estas partes se combinan para componer nuestra computadora en un delicado equilibrio en el cual las formas quizá más bellas o pintorescas sean incapaces de permitirnos administrar nuestro correo electrónico, leer las noticias o visualizar nuestra serie favorita.&nbsp;  Las computadoras se miran de frente, pues hacia atrás o de costado resultan particularmente incómodas. La actitud natural consiste en mantenerse sentadx, los brazos apoyados sobre una mesa sin esfuerzo, la cabeza erguida aunque no tanto y respirando lenta y regularmente. Para usar una computadora se comienza por enchufarla a la red eléctrica o conectarle su batería para luego encenderla con el dedo indice presionando el símbolo -cuasi universal- de <strong>encendido</strong></p>
+<p>Nadie habrá dejado de observar que con frecuencia las personas pasan horas frente al brillo de su computadora, conducta que se repite sea del color que sea tanto el brillo como el exterior que lo envuelve. </p>
+
+<p> Teclado, ratón, placa madre, procesador, memoria RAM, placa de sonido, fuente eléctrica, puertos USB, disco duro, pantalla... </p>
+
+<p>Cada una de estas partes se combinan para componer nuestra computadora en un delicado equilibrio en el cual las formas quizá más bellas o pintorescas sean incapaces de permitirnos administrar nuestro correo electrónico, leer las noticias o visualizar nuestra serie favorita...<strong>En síntesis:</strong></p>
+
+<ol>
+  <li>
+    Las computadoras se miran de frente, pues hacia atrás o de costado resultan particularmente incómodas.
+  </li>
+  <li>
+    La actitud natural consiste en mantenerse sentadx, los brazos apoyados sobre una mesa sin esfuerzo, la cabeza erguida aunque no tanto y respirando lenta y regularmente
+  </li>
+</ol>
+
+<p>Para usar una computadora se comienza por enchufarla a la red eléctrica o conectarle su batería para luego encenderla con el dedo indice presionando el símbolo -cuasi universal- de <strong>encendido</strong></p>
 
 <img src="https://www.stickpng.com/assets/images/5a059a909cf05203c4b6045b.png" width="64">
 
