--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h4>Lección 1 </h4>
 
-<p>Nadie habrá dejado de observar que con frecuencia las personas pasan horas frente al brillo de su computadora, conducta que se repite sea del color que sea tanto el brillo como el exterior que lo envuelve. </p>
+<p>Nadie habrá dejado de observar que con frecuencia las personas pasan horas frente al brillo de su computadora, conducta que se repite sea del color que sea tanto el brillo como del exterior que lo envuelve. </p>
 
 <p> Teclado, ratón, placa madre, procesador, memoria RAM, placa de sonido, fuente eléctrica, puertos USB, disco duro, pantalla... </p>
 
